# NewDP

./: .env  README.md  pyproject.toml
app/: main.py
app/core/: config.py  database.py  email_templates.py  email_utils.py
app/models/: app_dp_ajustes_valores_pj_postgres.py  aprovadores.py  funcionarios_pj.py  funcionarios_pj_postgres.py  user.py
app/queries/: colaboradores.sql  pj_calculado.sql  planos_de_saude_pj.sql  valor_hora_vr_cidade.sql
app/routes/: auth_routes.py  cad_aprovador.py  cad_pj_vinculo copy.py  cad_pj_vinculo.py  dashboard_routes.py  pj_email copy 2.py  pj_email copy.py  pj_email.py  relatoriosPj.py
app/schemas/: colaboradores_schema.py  dados_pj.py  user_schema.py
app/services/: auth_service.py  user_service.py
app/templates/: cad_aprovador.html  cad_prestador.html  dashboard.html  login.html  pj_email copy 2.html  pj_email copy.html  pj_email.html  relatorioPJ.html
