[project]
name = "dpnew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.30.0",
    "bcrypt==3.2.0",
    "fastapi[all]>=0.120.4",
    "jinja2>=3.1.6",
    "oracledb>=3.4.0",
    "passlib>=1.7.4",
    "pydantic>=2.12.3",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
